# DynamicalSystemFramework

./: .clang-format  .codacy.yaml  .codacy.yml  .dockerignore  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Doxyfile  README.md  requirements.txt  vcpkg-configuration.json
.github/workflows/: benchmark.yml  cache_profiler.yml  clang_format.yml  cmake_examples.yml  cmake_install.yml  cmake_install_macos.yml  cmake_test.yml  cmake_test_macos.yml  codacy.yml  code_coverage.yml  codeql.yml  doxygen.yml  examples.yml  flawfinder.yml  gh-pages.yml  make_test.yml  profile_exec_time.yml  profile_mem_usage.yml  pylint.yml
benchmark/: Bench.hpp  CMakeLists.txt
benchmark/Dynamics/: BenchDynamics.cpp  CMakeLists.txt
benchmark/Graph/: BenchGraph.cpp  CMakeLists.txt
benchmark/Street/: BenchStreet.cpp  CMakeLists.txt
docs/: Agent_8hpp.html  Agent_8hpp.js  Agent_8hpp__dep__incl.map  Agent_8hpp__dep__incl.md5  Agent_8hpp__incl.map  Agent_8hpp__incl.md5  DijkstraResult_8hpp.html  Dynamics_8hpp.html  Dynamics_8hpp.js  Graph_8hpp.html  Graph_8hpp.js  Graph_8hpp__dep__incl.map  Graph_8hpp__dep__incl.md5  Graph_8hpp__incl.map  Graph_8hpp_source.html  Intersection_8hpp.html  Intersection_8hpp.js  Itinerary_8hpp.html  Itinerary_8hpp.js  Itinerary_8hpp__dep__incl.map  Itinerary_8hpp__dep__incl.md5  Itinerary_8hpp__incl.map  Itinerary_8hpp__incl.md5  Node_8hpp.html  Node_8hpp.js  Node_8hpp__dep__incl.map  Node_8hpp__dep__incl.md5  Node_8hpp__incl.map  Node_8hpp__incl.md5  Node_8hpp_source.html  RoadDynamics_8hpp.html  RoadDynamics_8hpp.js  Roundabout_8hpp.html  Roundabout_8hpp.js  SparseMatrix_8hpp.html  SparseMatrix_8hpp.js  SparseMatrix_8hpp__dep__incl.map  SparseMatrix_8hpp__dep__incl.md5  SparseMatrix_8hpp__incl.map  SparseMatrix_8hpp__incl.md5  (+141 more)
docs/html/: Agent_8hpp.html  Agent_8hpp.js  Agent_8hpp__dep__incl.map  Agent_8hpp__dep__incl.md5  Agent_8hpp__incl.map  Agent_8hpp__incl.md5  Agent_8hpp_source.html  Dynamics_8hpp.html  Dynamics_8hpp.js  Dynamics_8hpp__incl.map  Dynamics_8hpp__incl.md5  Dynamics_8hpp_source.html  Graph_8hpp.html  Graph_8hpp.js  Graph_8hpp__incl.map  Graph_8hpp__incl.md5  Graph_8hpp_source.html  Itinerary_8hpp.html  Itinerary_8hpp__dep__incl.map  Itinerary_8hpp__dep__incl.md5  Itinerary_8hpp__incl.map  Itinerary_8hpp__incl.md5  Itinerary_8hpp_source.html  Node_8hpp.html  Node_8hpp__dep__incl.map  Node_8hpp__dep__incl.md5  Node_8hpp__incl.map  Node_8hpp__incl.md5  Node_8hpp_source.html  SparseMatrix_8hpp.html  SparseMatrix_8hpp__dep__incl.map  SparseMatrix_8hpp__dep__incl.md5  SparseMatrix_8hpp__incl.map  SparseMatrix_8hpp__incl.md5  SparseMatrix_8hpp_source.html  Street_8hpp.html  Street_8hpp__dep__incl.map  Street_8hpp__dep__incl.md5  Street_8hpp__incl.map  Street_8hpp__incl.md5  (+71 more)
docs/latex/: Agent_8hpp.tex  Agent_8hpp__dep__incl.md5  Agent_8hpp__incl.md5  Dynamics_8hpp.tex  Dynamics_8hpp__incl.md5  Graph_8hpp.tex  Graph_8hpp__dep__incl.md5  Graph_8hpp__incl.md5  Itinerary_8hpp.tex  Itinerary_8hpp__dep__incl.md5  Itinerary_8hpp__incl.md5  Node_8hpp.tex  Node_8hpp__dep__incl.md5  Node_8hpp__incl.md5  SparseMatrix_8hpp.tex  SparseMatrix_8hpp__dep__incl.md5  SparseMatrix_8hpp__incl.md5  Street_8hpp.tex  Street_8hpp__dep__incl.md5  Street_8hpp__incl.md5  annotated.tex  classdmf_1_1Agent.tex  classdmf_1_1Graph.tex  classdmf_1_1Itinerary.tex  classdmf_1_1Node.tex  classdmf_1_1SparseMatrix.tex  classdmf_1_1Street.tex  classdsm_1_1Agent.tex  classdsm_1_1Dynamics.tex  classdsm_1_1Graph.tex  classdsm_1_1Itinerary.tex  classdsm_1_1Node.tex  classdsm_1_1SparseMatrix.tex  classdsm_1_1Street.tex  files.tex  hierarchy.tex  refman.tex  structdsm_1_1is__node.eps  structdsm_1_1is__node.tex  structdsm_1_1is__node_3_01Node_3_01Id_01_4_01_4.eps  (+25 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  (+19 more)
docs/xml/: Agent_8hpp.xml  Doxyfile.xml  Dynamics_8hpp.xml  Graph_8hpp.xml  HashFunctions_8hpp.xml  Itinerary_8hpp.xml  Node_8hpp.xml  SparseMatrix_8hpp.xml  Street_8hpp.xml  classdsm_1_1Agent.xml  classdsm_1_1Dynamics.xml  classdsm_1_1Graph.xml  classdsm_1_1Itinerary.xml  classdsm_1_1Node.xml  classdsm_1_1SparseMatrix.xml  classdsm_1_1Street.xml  dir_30b8eb66e65756cb0ed7e2a18e7ceca1.xml  dir_5f3c2da6cfa74439aaedc98709fe5cec.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dsm_8hpp.xml  index.xml  (+22 more)
examples/: CMakeLists.txt  Makefile  README.md  functions.py  gifter.py  plotter.py  requirements.txt  slow_charge_rb.cpp  slow_charge_tl.cpp  slow_charge_tl_vero.cpp  stalingrado.cpp
examples/data/: coordinates.csv  coordinates.dsm  stalingrado_input.txt
profiling/: CMakeLists.txt  main.cpp  parse_massif.cpp
src/: Agent.hpp  Edge.hpp  Graph.hpp  HashFunctions.hpp  Itinerary.hpp  Node.hpp  SparseMatrix.hpp  Street.hpp
test/: CMakeLists.txt  Makefile  Test_RoadDynamics.cpp  Test_TrainDynamics.cpp  Test_agent.cpp  Test_dynamics.cpp  Test_graph.cpp  Test_is_node.cpp  Test_is_numeric.cpp  Test_is_street.cpp  Test_itinerary.cpp  Test_node.cpp  Test_sparsematrix.cpp  Test_street.cpp
test/Agent/: CMakeLists.txt  Test_agent.cpp
test/Dynamics/: CMakeLists.txt  Test_dynamics.cpp
test/Graph/: CMakeLists.txt  Test_graph.cpp
test/Itinerary/: CMakeLists.txt  Test_itinerary.cpp
test/Node/: CMakeLists.txt  Test_node.cpp
test/SparseMatrix/: CMakeLists.txt  Test_sparsematrix.cpp
test/Street/: CMakeLists.txt  Test_street.cpp
test/TypeTraits/: CMakeLists.txt  is_node.cpp  is_numeric.cpp  is_street.cpp
test/data/: coordinates.csv  coords.dsm  edges.csv  edges_big.csv  nodes.csv  nodes_big.csv  rawMatrix.txt
utils/: README.md  functions.py  get_osm_data.py  gifter.py  plotter.py  videomaker.py
(+108 files in other folders)
